--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,11 @@ on:
   push:
     branches:
       - main
-      - development
+      - develop
   pull_request:
     branches:
       - main
-      - development
+      - develop
 
 jobs:
   test-backend:
@@ -45,10 +45,13 @@ jobs:
       run: |
         python backend/manage.py migrate
         python backend/manage.py test transactions
+    - name: Start backend server
+      run: |
+        nohup python backend/manage.py runserver 0.0.0.0:8000 &
 
   test-frontend:
     runs-on: ubuntu-latest
-
+    needs: test-backend  # Ensure this job runs after backend tests and server start
     steps:
     - uses: actions/checkout@v2
     - name: Set up Node.js
@@ -59,6 +62,12 @@ jobs:
       run: |
         cd frontend
         npm install
+    - name: Wait for backend to be ready
+      run: |
+        until curl -s http://localhost:8000/api/transactions/; do
+          echo "Waiting for backend to be ready..."
+          sleep 5
+        done
     - name: Run frontend tests
       run: |
         cd frontend
